Fix scrolling behavior on ios

--- a/app/src/component/playlist/playlist.css
+++ b/app/src/component/playlist/playlist.css
@@ -3,6 +3,7 @@
   bottom: 0;
   right: 0;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   max-height: 98%;
   z-index: 100;
   padding-left: 0 !important;
